added a title, and header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My Site</title>
+		<title>Neymar's Fansite</title>
 	</head>
 	<body>
+		<header>
+			<a name="top"></a>
+				<h1>Neymar's Fansite</h1>
+				<nav>
+					<ul>
+						<li><a href="#gallery">Gallery</a></li>
+						<li><a href="#fun_facts">Fun Facts</a></li>
+					</ul>
+				</nav>
+				<div id="neymar_banner">
+					<img src="images/banner.jpg" alt="Neymar vs France">
+				
+					<h2>Neymar da Silva Santos Júnior</h2>
+					<article>
+						<p>Neymar da Silva Santos Júnior, commonly known as Neymar, is a Brazilian footballer who recently played in the Brasileirão Série A for Santos and the Brazilian national team, mainly as a forward.  Neymar is now playing for Barcelona, a Spanish Team in La Liga(National League), after the team spent a whopping €57 million Euros.</p>
+					</article>
+					<div id="button">
+						<form><input type="button" value="Sign Up!" onClick="href='#'"></form>	
+					</div>
+				</div>
+		</header>
 	</body>
 	<footer>
 	</footer>
