--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
 					</div>
 				</div>
 		</header>
+		<section id="gallery">
+			<a name="gallery"></a>
+			<h1>Gallery</h1>
+			<p>View some of the most famous photos of Neymar.</p>
+			<div id="gallery_images">
+				<ul>
+					<li><img src="images/neymar_messi.jpg" alt="Neymar vs. Messi" width="500" height="350"></li>
+					<li><img src="images/neymar_brazil.jpg" alt="Neymar in the Brazilian National Team" width="500" height="350"></li>
+					<li><img src="images/neymar_ronaldo.jpg" alt="Neymar with the retired Ronaldo" width="500" height="350"></li>
+					<li><img src="images/neymar_barcelona.jpg" alt="Neymar, newest addition to Barcelona." width="500" height="350"></li>
+				</ul>
+			</div>		
+			<a href="#top">Top</a>
+		</section>
+		
 	</body>
 	<footer>
 	</footer>
