Added Fun Facts about Neymar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					</div>
 				</div>
 		</header>
+		
 		<section id="gallery">
 			<a name="gallery"></a>
 			<h1>Gallery</h1>
@@ -38,6 +39,29 @@
 					<li><img src="images/neymar_barcelona.jpg" alt="Neymar, newest addition to Barcelona." width="500" height="350"></li>
 				</ul>
 			</div>		
+			<a href="#top">Top</a>
+		</section>
+		
+		<section id="fun_facts">
+			<a name="fun_facts"></a>
+			<h1>Fun Facts</h1>
+			<p>Here are some <strong>Fun Facts</strong> about Neymar.</p>
+			<ol>
+				<li>1. Santos Has Been His Only Club before the transfer to Barcelona. Now that he has joined Barcelona he will wear a new jersey for the first time in his footballing career.</li>
+				<li>2. He Scored His 100th Professional Goal on His 20th Birthday. Few, if any, have set a milestone like this on their birthday. And hardly anyone did it at the age of the 20. </li>
+				<li>3. Neymar Is a Father! When the Brazilian was only 19 years old he welcomed his son, Davi Lucca, to the world.</li>
+				<li>4. He Nearly Joined Real Madrid When He Was 14. Neymar flew to Spain when he was only 14 to join the Spanish side. He passed all of the tests and was ready to make the move official before Santos paid a hefty price to keep him in Brazil. </li>
+				<li>5. Neymar Is the Only Brazilian Athlete to Be on the Cover of TIME Magazine. It is hard to believe that Neymar is the only Brazilian athlete to ever grace the cover of Time magazine. For a country that is known for their sports legends, this is truly a magnificent feat.</li>
+				<li>6. West Ham Was the First Club to Make a Bid for Neymar. Neymar was just beginning to showcase his skill in 2010 when an English team took notice. That club was surprisingly West Ham. They quickly made a bid of £12 million for the Brazilian but were turned down immediately.</li>
+				<li>7. The Interesting Beginning to His International Career. Despite his talents, Neymar was overlooked early on by the Brazil national team. Legends such as Pele and Romario pushed Dunga to include him in the 2010 World Cup, followed by a petition signed by 14,000 fans. </li>
+				<li>8. He Is the Seventh-Richest Footballer in the World. Neymar may only be a kid, but he is richer than almost anyone around. In 2012 he was listed as the seventh-richest footballer in the world.</li>
+				<li>9. His Is Only Barcelona's Ninth-Most Expensive Purchase.  This is actually very surprising with all things being considered. With all of Neymar’s hype and talent, he actually came fairly cheap for Barcelona. The Brazilian is the ninth-most expensive purchase in the club’s history at only 57 million euros.</li>
+				<li>10. Neymar Is the World's Most Marketable Athlete. Yes, you read that right. Neymar has beat out the likes of Messi, Ronaldo, Usain Bolt, Rory McIlroy and countless others for two consecutive years as the most marketable athlete on the planet. At 21 years old, this has to be the most astonishing fact about the Brazilian.</li>
+			</ol>
+			<aside>
+				<p>Read about Neymar in Wikipedia by clicking on the button below.</p>
+				<form><input type="button" value="Wikipedia" onClick="window.location.href='http://www.en.wikipedia.org/wiki/Neymar'"></form>
+			</aside>
 			<a href="#top">Top</a>
 		</section>
 		
