--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 			<a href="#top">Top</a>
 		</section>
 		
-	</body>
-	<footer>
-	</footer>
+		<footer>
+			<p>Thanks for Visiting.  All Rights Reserved 2013</p>	
+		</footer>
+	</div>
+</body>
 </html>
