--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 				</nav>
 				<div id="neymar_banner">
 					<img src="images/banner.jpg" alt="Neymar vs France">
-				
-					<h2>Neymar da Silva Santos Júnior</h2>
-					<article>
+					<div id="neymar_info">
+						<h2>Neymar da Silva Santos Júnior</h2>
+						<article>
 						<p>Neymar da Silva Santos Júnior, commonly known as Neymar, is a Brazilian footballer who recently played in the Brasileirão Série A for Santos and the Brazilian national team, mainly as a forward.  Neymar is now playing for Barcelona, a Spanish Team in La Liga(National League), after the team spent a whopping €57 million Euros.</p>
-					</article>
+						</article>
+					</div>
 					<div id="button">
 						<form><input type="button" value="Sign Up!" onClick="href='#'"></form>	
 					</div>
