--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 		<meta charset="utf-8">
 		<title>Neymar's Fansite</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header>
 			<a name="top"></a>
-				<h1>Neymar's Fansite</h1>
-				<nav>
-					<ul>
-						<li><a href="#gallery">Gallery</a></li>
-						<li><a href="#fun_facts">Fun Facts</a></li>
-					</ul>
-				</nav>
+				<div id="navbar">
+					<div id="neymar_logo">
+                    <a href="#top"><img src="images/neymar_logo.png" width="240" height="63" alt="Neymar Logo" /></a> 
+    				</div>
+                    <nav> 
+  						<ul>
+ 							<li><a href="#gallery">GALLERY</a></li> |
+							<li><a href="#fun_facts">FUN FACTS</a></li> 
+  						</ul> 
+                    </nav>
+				</div>
 				<div id="neymar_banner">
 					<img src="images/banner.jpg" alt="Neymar vs France">
 					<div id="neymar_info">
@@ -35,10 +40,10 @@
 			<p>View some of the most famous photos of Neymar.</p>
 			<div id="gallery_images">
 				<ul>
-					<li><img src="images/neymar_messi.jpg" alt="Neymar vs. Messi" width="500" height="350"></li>
-					<li><img src="images/neymar_brazil.jpg" alt="Neymar in the Brazilian National Team" width="500" height="350"></li>
-					<li><img src="images/neymar_ronaldo.jpg" alt="Neymar with the retired Ronaldo" width="500" height="350"></li>
-					<li><img src="images/neymar_barcelona.jpg" alt="Neymar, newest addition to Barcelona." width="500" height="350"></li>
+					<li><img src="images/neymar_messi.jpg" alt="Neymar vs. Messi" width="450" height="300"></li>
+					<li><img src="images/neymar_brazil.jpg" alt="Neymar in the Brazilian National Team" width="450" height="300"></li>
+					<li><img src="images/neymar_ronaldo.jpg" alt="Neymar with the retired Ronaldo" width="450" height="300"></li>
+					<li><img src="images/neymar_barcelona.jpg" alt="Neymar, newest addition to Barcelona." width="450" height="300"></li>
 				</ul>
 			</div>		
 			<a href="#top">Top</a>
